[gd_scene load_steps=4 format=3 uid="uid://c4ibvq2k1jswe"]

[ext_resource type="Script" path="res://scene/simple_plot/plot_master.gd" id="1_4lflx"]
[ext_resource type="Script" path="res://static_plot.gd" id="1_l7i4o"]
[ext_resource type="Script" path="res://scene/simple_plot/add_data.gd" id="2_ym1vr"]

[node name="PlotRegion" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_4lflx")

[node name="DataLine" type="Line2D" parent="."]
script = ExtResource("1_l7i4o")

[node name="AddData" type="Button" parent="."]
layout_mode = 0
offset_left = 948.0
offset_top = 554.0
offset_right = 1123.0
offset_bottom = 621.0
text = "Add randomized 
data"
script = ExtResource("2_ym1vr")

[node name="PlotData" type="Button" parent="."]
layout_mode = 0
offset_left = 945.0
offset_top = 464.0
offset_right = 1121.0
offset_bottom = 533.0
text = "Plot Data"
